smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/no-empty-apply-types.smithy
$version: "2.0"
namespace smithy.example

@mixin
structure MixinStruct {
    bar: PrimitiveInteger = null
}

structure MixedStruct with [MixinStruct] {}
